# health_app

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/skills/: browser-testing-with-devtools  code-simplification  debugging-and-error-recovery  frontend-ui-engineering  git-workflow-and-versioning  idea-refine  incremental-implementation  planning-and-task-breakdown  source-driven-development  spec-driven-development  using-agent-skills
app/: db.py  main.py  scoring.py
app/routes/: dashboard.py  habits.py  hub.py  journal.py  settings.py  trigger.py  weekly.py
app/templates/: _goal_form_fields.html  _habit_inputs.html  _habits_list.html  _journal_tabs.html  _notes_list.html  _trigger_list.html  base.html  checkin.html  dashboard.html  habits.html  hub.html  journal_goals.html  journal_notes.html  journal_triggers.html  settings.html  trigger.html  weekly.html
docs/: design.md  plan.md  spec.md
migrations/: 001_init.sql  002_seed_habits.sql  003_settings.sql  004_extend_habit_pillars.sql  005_drop_sleep_quality.sql  006_meals_count_and_remove_meals_habit.sql  007_pillar_threshold_settings.sql  008_water_liters.sql  009_bedtime_and_regularity.sql  010_goals.sql  011_drop_flag_columns.sql
scripts/: run.sh
static/: app.css
tests/: test_scoring.py
